--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Carrom Board Design</title>
     <link rel="stylesheet" href="design.css">
 </head>
-<body style="background-color:red">
+<body style="background-color:blue">
     
     <div class="outer">
       <div id="hole1"></div>
@@ -28,6 +28,6 @@
       <div id="bottomLineEnd1"></div>
       <div id="bottomLineEnd2"></div>
     </div>
-    <h2>Created by me </h2>
+    <h2>Created by Abhishek</h2>
 </body>
 </html>
